  is final.
 -Ranlib is now run on the archives. Patch from Kenny MacDermid.
 -The case statement syntax in ruby code generation used a form depreciated in
  Ruby 1.9. Updated it.
 -Made a number of fixes that eliminate warnings in GCC 4.3. Mostly concern
  the now depreciate automatic conversion of string contsants to "char*" type.
  Other fixes include adding parenthesis around && within ||.

Ragel 5.25 - Dec 24, 2007
=========================
 -Fixed segfault reported by Ryan Phelps. Affected Java and Ruby code
  generation. The dataExpr variable was not initialized.
 -Fixed incorrect case label in test/runtests. Caused Objective-C tests to be
  ignored.
 -Added missing include to common.cpp.

Ragel 5.24 - Sep 16, 2007
=========================
 -Applied patch from Victor Hugo Borja <vic@rubyforge.org>. This patch
  implements -T1 -F0 -F1 and -G0 in the ruby code generator. Goto-driven code
  generation is experimental and requires rubinius asm directives (specify
  with --rbx option). These code generators pass all the ruby tests.
 -If the condition embedding code runs out of available characters in the
  keyspace an error message is emitted.
 -The first example that appeared in the manual used the special-purpose
  'noend' write option. This caused confusion. Now a basic example appears
  first.
 -Added two new statements: prepush and postpop. These are code blocks that
  are written out during call and return statements. The prepush code is
  written immediately before pushing the current state to the state stack
  during a call. The postpop code is written immediately after popping the
  current state during return. These can be used to implement a dynamically
  resizable stack. 

Ragel 5.23 - Jul 24, 2007
=========================
 -Eliminated the use of callcc as an alternative to goto. Instead, the named
  breaks implementation used in the Java code generator is imitated using
  control flow variables.