@@ -196,7 +196,7 @@ string RubyCodeGen::TOKSTART()
 {
 	ostringstream ret;
 	if ( tokstartExpr == 0 )
-		ret << ACCESS() + "tokstart";
+		ret << ACCESS() + "ts";
 	else {
 		//ret << "(";
 		INLINE_LIST( ret, tokstartExpr, 0, false );
@@ -209,7 +209,7 @@ string RubyCodeGen::TOKEND()
 {
 	ostringstream ret;
 	if ( tokendExpr == 0 )
-		ret << ACCESS() + "tokend";
+		ret << ACCESS() + "te";
 	else {
 		//ret << "(";
 		INLINE_LIST( ret, tokendExpr, 0, false );
