@@ -5,8 +5,8 @@
 char comm;
 int top;
 int stack[32];
-ptr tokstart;
-ptr tokend;
+ptr ts;
+ptr te;
 int act;
 int val;
 %%
@@ -20,11 +20,11 @@ int val;
 	*|;
 
 	exec_test := |* 
-		[a-z]+ => { prints "word (w/lbh)\n"; fexec tokend-1; fgoto other; };
+		[a-z]+ => { prints "word (w/lbh)\n"; fexec te-1; fgoto other; };
 		[a-z]+ ' foil' => { prints "word (c/lbh)\n"; };
 		[\n ] => { prints "space\n"; };
 		'22' => { prints "num (w/switch)\n"; };
-		[0-9]+ => { prints "num (w/switch)\n"; fexec tokend-1; fgoto other;};
+		[0-9]+ => { prints "num (w/switch)\n"; fexec te-1; fgoto other;};
 		[0-9]+ ' foil' => {prints "num (c/switch)\n"; };
 		'!';# => { prints "immdiate\n"; fgoto exec_test; };
 	*|;
